--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 </head>
 <body>
     <div class="container">
-        <a href="https://www.example1.com" class="btn btn-1" target="_blank">Регистрация на семинар</a>
-        <a href="https://www.example2.com" class="btn btn-2" target="_blank">Анкета для работы в лагере "Вифания"</a>
+        <a href="https://forms.gle/2GQFXx7hu8JkbW5b9" class="btn btn-1" target="_blank">Регистрация на семинар</a>
+        <a href="https://forms.gle/UuCst31b9Zm6hsTKA" class="btn btn-2" target="_blank">Анкета для работы в лагере "Вифания"</a>
     </div>
 </body>
 </html>
