--- a/index.html
+++ b/index.html
@@ -1,74 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Семинар в лагере "Вифания" 2025</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="public/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="public/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="public/favicon-16x16.png"
+    />
+    <link rel="manifest" href="public/site.webmanifest" />
     <style>
-        /* CSS Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        html, body {
-            height: 100%;
-            font-family: Arial, sans-serif;
-            padding: 20px;
-        }
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: url('images/background.png') no-repeat center center fixed;
-            background-size: cover;
-        }
-        .container {
-            position: relative;
-            text-align: center;
-            width: 100%;
-            background: rgba(255, 255, 255, 0.8);
-            border-radius: 15px;
-            padding: 20px;
-        }
-        .btn {
-            display: inline-block;
-            padding: 15px 30px;
-            margin: 10px;
-            font-size: 18px;
-            font-weight: bold;
-            color: #fff;
-            border: none;
-            border-radius: 25px; /* Rounded corners for buttons */
-            text-decoration: none;
-            transition: background-color 0.3s ease;
-            width: 90%;
-            max-width: 500px; /* Set a maximum width for wider screens */
-        }
-        .btn-1 {
-            background-color: #4CAF50; /* Friendly green */
-        }
-        .btn-1:hover {
-            background-color: #45a049;
-        }
-        .btn-1:active {
-            background-color: #39843c;
-        }
-        .btn-2 {
-            background-color: #FF9800; /* Friendly orange */
-        }
-        .btn-2:hover {
-            background-color: #fb8c00;
-        }
-        .btn-2:active {
-            background-color: #f57c00;
-        }
+      /* CSS Reset */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      html,
+      body {
+        height: 100%;
+        font-family: Arial, sans-serif;
+        padding: 20px;
+      }
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: url("images/background.png") no-repeat center center fixed;
+        background-size: cover;
+      }
+      .container {
+        position: relative;
+        text-align: center;
+        width: 100%;
+        background: rgba(255, 255, 255, 0.8);
+        border-radius: 15px;
+        padding: 20px;
+      }
+      .btn {
+        display: inline-block;
+        padding: 15px 30px;
+        margin: 10px;
+        font-size: 18px;
+        font-weight: bold;
+        color: #fff;
+        border: none;
+        border-radius: 25px; /* Rounded corners for buttons */
+        text-decoration: none;
+        transition: background-color 0.3s ease;
+        width: 90%;
+        max-width: 500px; /* Set a maximum width for wider screens */
+      }
+      .btn-1 {
+        background-color: #4caf50; /* Friendly green */
+      }
+      .btn-1:hover {
+        background-color: #45a049;
+      }
+      .btn-1:active {
+        background-color: #39843c;
+      }
+      .btn-2 {
+        background-color: #ff9800; /* Friendly orange */
+      }
+      .btn-2:hover {
+        background-color: #fb8c00;
+      }
+      .btn-2:active {
+        background-color: #f57c00;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <a href="https://forms.gle/2GQFXx7hu8JkbW5b9" class="btn btn-1" target="_blank">Регистрация на семинар</a>
-        <a href="https://forms.gle/UuCst31b9Zm6hsTKA" class="btn btn-2" target="_blank">Анкета для работы в лагере "Вифания"</a>
+      <a
+        href="https://forms.gle/2GQFXx7hu8JkbW5b9"
+        class="btn btn-1"
+        target="_blank"
+        >Регистрация на семинар</a
+      >
+      <a
+        href="https://forms.gle/UuCst31b9Zm6hsTKA"
+        class="btn btn-2"
+        target="_blank"
+        >Анкета для работы в лагере "Вифания"</a
+      >
     </div>
-</body>
+  </body>
 </html>
