Update header image styles

--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
       }
       .bg-image {
         width: 100%;
-        object-fit: cover;
+        object-fit: contain;
         align-self: flex-start;
         position: absolute;
         top: 0;
         left: 0;
+        height: 30vh;
       }
     </style>
   </head>
