--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       .bg-image {
         width: 100%;
         object-fit: contain;
+        object-position: top;
         align-self: flex-start;
         position: absolute;
         top: 0;
